--- a/index.html
+++ b/index.html
@@ -2,189 +2,187 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>SURVIVAL_RULES_ULTIMATE</title>
+    <title>SURVIVAL_LAW_ULTRA</title>
     <style>
         :root {
-            --neon-yellow: #ffdf00;
-            --deep-cyan: #00f2ff;
-            --panel-bg: rgba(4, 12, 18, 0.9);
-            --border-glow: rgba(0, 242, 255, 0.15);
+            --neon-yellow: #f1c40f;
+            --neon-cyan: #00f2ff;
+            --bg-color: #010608;
+            --glass-bg: rgba(6, 18, 24, 0.85);
         }
 
         body, html {
             margin: 0; padding: 0;
-            background-color: #010406;
-            color: #fff;
-            font-family: 'Share Tech Mono', 'Courier New', monospace;
+            background-color: var(--bg-color);
+            color: white;
+            font-family: 'Share Tech Mono', 'Segoe UI', sans-serif;
             height: 100vh; overflow: hidden;
             display: flex; flex-direction: column; align-items: center;
         }
 
-        /* 1. 模拟 CRT 显示器质感 */
-        .crt-overlay {
+        /* 1. 深度网格底层 - 增加丝滑渐变 */
+        .grid-layer {
             position: fixed; inset: 0;
-            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.2) 50%), 
-                        linear-gradient(90deg, rgba(255, 0, 0, 0.05), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.05));
-            background-size: 100% 2px, 2px 100%;
-            pointer-events: none; z-index: 1000;
+            background-image: 
+                linear-gradient(rgba(0, 242, 255, 0.05) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(0, 242, 255, 0.05) 1px, transparent 1px);
+            background-size: 50px 50px;
+            z-index: -2;
+            mask-image: radial-gradient(circle at center, black 30%, transparent 90%);
         }
 
-        /* 2. 背景超细网格 */
-        .grid-bg {
+        /* 2. 动态鼠标追踪光晕 - 增加丝滑感 */
+        #light-tracker {
+            position: fixed; width: 600px; height: 600px;
+            background: radial-gradient(circle, rgba(0, 242, 255, 0.08) 0%, transparent 70%);
+            pointer-events: none; z-index: -1;
+            transform: translate(-50%, -50%);
+            transition: transform 0.15s cubic-bezier(0.2, 0, 0.2, 1);
+        }
+
+        /* 3. 极细动态扫描线 */
+        .scanline {
             position: fixed; inset: 0;
-            background-image: linear-gradient(rgba(0, 242, 255, 0.03) 1px, transparent 1px),
-                              linear-gradient(90deg, rgba(0, 242, 255, 0.03) 1px, transparent 1px);
-            background-size: 30px 30px;
-            z-index: -1;
+            background: linear-gradient(to bottom, transparent, rgba(0, 242, 255, 0.05) 50%, transparent);
+            height: 10%; width: 100%;
+            pointer-events: none; z-index: 10;
+            animation: scan 8s linear infinite;
+        }
+        @keyframes scan { from { top: -10%; } to { top: 110%; } }
+
+        /* 4. 高精 Logo：模拟“生存法则图标.jpg”中的破碎与能量 */
+        .logo-box {
+            margin-top: 40px; position: relative;
+            filter: drop-shadow(0 0 15px rgba(241, 196, 15, 0.5));
+            animation: energy-pulse 4s infinite alternate;
         }
 
-        /* 3. 真实感 Logo 区域 */
-        .logo-wrap {
-            position: relative; margin-top: 50px; margin-bottom: 20px;
-            width: 200px; height: 200px;
+        @keyframes energy-pulse {
+            0% { transform: scale(1); filter: brightness(1) drop-shadow(0 0 10px var(--neon-yellow)); }
+            100% { transform: scale(1.05); filter: brightness(1.2) drop-shadow(0 0 25px var(--neon-yellow)); }
         }
 
-        /* SVG 核心：多层闪电滤镜 */
-        .cyber-logo {
-            width: 100%; height: 100%;
-            filter: drop-shadow(0 0 12px rgba(255, 223, 0, 0.6));
-            animation: flickering 0.15s infinite alternate;
-        }
-
-        @keyframes flickering {
-            0% { opacity: 0.95; transform: skewX(0deg); }
-            100% { opacity: 1; transform: skewX(0.5deg); }
-        }
-
-        /* 4. 标题与文字流 */
-        .main-title {
-            font-size: 5rem; font-weight: 900; letter-spacing: 20px;
-            background: linear-gradient(to bottom, #fff 50%, #aaa 100%);
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            margin: 0; filter: drop-shadow(0 0 10px rgba(255,255,255,0.2));
-        }
-
-        /* 5. 经典 3x2 布局卡片 */
-        .interface-grid {
+        /* 5. 经典 3x2 布局容器 */
+        .terminal-grid {
             display: grid;
             grid-template-columns: repeat(3, 400px);
-            gap: 25px; margin-top: 40px;
+            gap: 20px; margin-top: 30px;
+            z-index: 5;
         }
 
-        .action-card {
-            background: var(--panel-bg);
+        .mil-card {
+            background: var(--glass-bg);
             border: 1px solid rgba(0, 242, 255, 0.1);
-            padding: 45px 35px;
-            position: relative;
+            padding: 40px 30px;
             backdrop-filter: blur(15px);
-            clip-path: polygon(0 0, 100% 0, 100% 88%, 94% 100%, 0 100%); /* 经典切角 */
-            transition: all 0.3s;
+            clip-path: polygon(0 0, 100% 0, 100% 88%, 92% 100%, 0 100%);
+            transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
             cursor: pointer;
+            position: relative;
         }
 
-        .action-card:hover {
-            border-color: var(--deep-cyan);
-            background: rgba(0, 242, 255, 0.08);
-            transform: scale(1.02);
-            box-shadow: inset 0 0 30px rgba(0, 242, 255, 0.1);
+        .mil-card::before {
+            content: ""; position: absolute; inset: 0;
+            background: linear-gradient(135deg, transparent, rgba(0, 242, 255, 0.05));
+            opacity: 0; transition: 0.4s;
         }
 
-        .action-card h2 { font-size: 2.4rem; margin: 0; letter-spacing: 4px; }
-        .action-card p { margin-top: 15px; color: var(--deep-cyan); opacity: 0.5; font-size: 1.1rem; }
+        .mil-card:hover {
+            border-color: var(--neon-cyan);
+            transform: translateY(-8px);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5), inset 0 0 15px rgba(0, 242, 255, 0.1);
+        }
+        .mil-card:hover::before { opacity: 1; }
 
-        /* 管理终端 - 红色警戒风格 */
-        .danger { border-left: 3px solid #ff3c41; }
-        .danger h2 { color: #ff3c41; }
+        .mil-card h2 { font-size: 2.2rem; margin: 0; letter-spacing: 4px; font-weight: bold; }
+        .mil-card p { margin-top: 15px; color: var(--neon-cyan); opacity: 0.6; font-size: 1rem; }
+
+        .admin-node { border-left: 3px solid #ff3c41; }
+        .admin-node h2 { color: #ff3c41; }
+
+        .title-text {
+            font-size: 4.5rem; letter-spacing: 18px; font-weight: 900;
+            margin: 10px 0; text-shadow: 0 0 20px rgba(255,255,255,0.2);
+        }
     </style>
 </head>
-<body onclick="initAudio()">
+<body onclick="enableAudio()">
 
-    <div class="crt-overlay"></div>
-    <div class="grid-bg"></div>
+    <div class="grid-layer"></div>
+    <div id="light-tracker"></div>
+    <div class="scanline"></div>
 
-    <div class="logo-wrap">
-        <svg class="cyber-logo" viewBox="0 0 100 100">
-            <defs>
-                <linearGradient id="goldGrad" x1="0%" y1="0%" x2="100%" y2="100%">
-                    <stop offset="0%" style="stop-color:#fff95b;stop-opacity:1" />
-                    <stop offset="100%" style="stop-color:#f1c40f;stop-opacity:1" />
-                </linearGradient>
-                <filter id="innerGlow">
-                    <feGaussianBlur in="SourceGraphic" stdDeviation="1.5" result="blur" />
-                    <feComposite in="SourceGraphic" in2="blur" operator="over" />
-                </filter>
-            </defs>
-            
-            <path d="M50 5 L92 27 V73 L50 95 L8 73 V27 Z" fill="none" stroke="url(#goldGrad)" stroke-width="2.5" stroke-dasharray="160 10 30 5" />
-            
-            <g filter="url(#innerGlow)">
-                <path d="M56 18 L34 52 H50 L44 82 L66 48 H50 L56 18 Z" fill="url(#goldGrad)" />
-                <rect x="75" y="40" width="10" height="1.5" fill="#f1c40f" opacity="0.6" />
-                <rect x="15" y="55" width="6" height="1.5" fill="#f1c40f" opacity="0.4" />
-            </g>
-
-            <rect width="100" height="2" fill="#fff" opacity="0.1">
-                <animate attributeName="y" from="0" to="100" dur="2s" repeatCount="indefinite" />
-            </rect>
+    <div class="logo-box">
+        <svg width="160" height="160" viewBox="0 0 100 100">
+            <path d="M50 5 L92 28 V72 L50 95 L8 72 V28 Z" fill="none" stroke="var(--neon-yellow)" stroke-width="3" stroke-dasharray="80 5 20 10 40" />
+            <path d="M56 18 L34 52 H50 L44 82 L66 48 H50 L56 18 Z" fill="var(--neon-yellow)">
+                <animate attributeName="opacity" values="1;0.7;1" dur="0.1s" repeatCount="indefinite" />
+            </path>
+            <rect x="85" y="40" width="8" height="1.5" fill="var(--neon-yellow)" />
+            <rect x="10" y="55" width="5" height="1" fill="var(--neon-yellow)" />
+            <path d="M80 20 L85 15" stroke="var(--neon-yellow)" stroke-width="1" />
+            <path d="M20 80 L15 85" stroke="var(--neon-yellow)" stroke-width="1" />
         </svg>
     </div>
 
-    <h1 class="main-title">生存法则</h1>
-    <div style="color:var(--deep-cyan); opacity: 0.6; letter-spacing: 4px; font-size: 12px; margin-top: 10px;">
-        > STATUS: ENCRYPTED_SYNC_ACTIVE...
-    </div>
+    <h1 class="title-text">生存法则</h1>
+    <div style="color: var(--neon-cyan); opacity: 0.5; font-size: 12px; letter-spacing: 5px;">> ENCRYPTED_SYNC_ACTIVE...</div>
 
-    <div class="interface-grid">
-        <div class="action-card" onmouseenter="playTick()">
+    <main class="terminal-grid">
+        <div class="mil-card" onmouseenter="tick()">
             <h2>全服聊天</h2>
             <p>> 大厅实时广播频道</p>
         </div>
-        <div class="action-card" onmouseenter="playTick()">
+        <div class="mil-card" onmouseenter="tick()">
             <h2>物资交易</h2>
             <p>> 发布、寻找各类资源</p>
         </div>
-        <div class="action-card" onmouseenter="playTick()">
+        <div class="mil-card" onmouseenter="tick()">
             <h2>加密私聊</h2>
             <p>> 点对点加密通讯协议</p>
         </div>
-        <div class="action-card" onmouseenter="playTick()">
+        <div class="mil-card" onmouseenter="tick()">
             <h2>同步补给</h2>
             <p>> 24小时周期资源同步</p>
         </div>
-        <div class="action-card" onmouseenter="playTick()">
+        <div class="mil-card" onmouseenter="tick()">
             <h2>荣誉排行</h2>
             <p>> 全服 XP 贡献排名</p>
         </div>
-        <div class="action-card danger" onmouseenter="playWarn()">
+        <div class="mil-card admin-node" onmouseenter="warn()">
             <h2>管理终端</h2>
             <p>> ROOT 核心权限接口</p>
         </div>
-    </div>
+    </main>
 
     <script>
+        const tracker = document.getElementById('light-tracker');
+        document.addEventListener('mousemove', (e) => {
+            tracker.style.left = e.clientX + 'px';
+            tracker.style.top = e.clientY + 'px';
+        });
+
         let audioCtx;
-        function initAudio() {
+        function enableAudio() {
             if(!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
         }
 
-        function playTick() {
+        function tick() {
             if(!audioCtx) return;
             const o = audioCtx.createOscillator();
             const g = audioCtx.createGain();
-            o.frequency.setValueAtTime(1200, audioCtx.currentTime);
-            o.frequency.exponentialRampToValueAtTime(400, audioCtx.currentTime + 0.05);
-            g.gain.setTargetAtTime(0.04, audioCtx.currentTime, 0.01);
-            g.gain.setTargetAtTime(0, audioCtx.currentTime + 0.05, 0.01);
+            o.frequency.setValueAtTime(1000, audioCtx.currentTime);
+            g.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.1);
             o.connect(g).connect(audioCtx.destination);
             o.start(); o.stop(audioCtx.currentTime + 0.1);
         }
 
-        function playWarn() {
+        function warn() {
             if(!audioCtx) return;
             const o = audioCtx.createOscillator();
             const g = audioCtx.createGain();
-            o.type = 'square'; o.frequency.value = 110;
-            g.gain.setValueAtTime(0.08, audioCtx.currentTime);
+            o.type = 'sawtooth'; o.frequency.value = 80;
+            g.gain.setValueAtTime(0.1, audioCtx.currentTime);
             g.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.3);
             o.connect(g).connect(audioCtx.destination);
             o.start(); o.stop(audioCtx.currentTime + 0.3);
